[package]
name = "switch-keyboard-controller"
version = "0.1.0"
authors = []
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5.9"
strum = "0.24.0"
strum_macros = "0.24.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
